--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-    "name": "com.unity.gist-importer",
+    "name": "com.gist-importer",
     "displayName": "Gist Importer",
-    "version": "1.0",
+    "version": "1.0.0",
     "unity": "2019.4",
     "description": "Import code directly from gist.",
-    "type": "tool"
+    "type": "tools",
+    "author": {
+      "name": "Alexandre Gaudencio",
+      "email": "alexandre.gtpjr@gmail.com"
+    }
   }
